--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
 <!DOCTYPE html>
-<html></html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HTML Example</title>
+  </head>
+  <body>
+    <h1>Ahoj</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias
+      similique recusandae amet aliquam ut obcaecati asperiores, minima quam
+      minus, autem iusto iure accusamus excepturi nam nulla! Molestiae deserunt
+      inventore aliquam.
+    </p>
+  </body>
+</html>
