--- a/index.html
+++ b/index.html
@@ -1,17 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML Example</title>
-  </head>
-  <body>
-    <h1>Ahoj</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias
-      similique recusandae amet aliquam ut obcaecati asperiores, minima quam
-      minus, autem iusto iure accusamus excepturi nam nulla! Molestiae deserunt
-      inventore aliquam.
-    </p>
-  </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Trade+Winds&display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+    <h1>UNDERTALE</h1>
+    <h2><i>Undertale</i> nebo podzemni pohadka je kedna z nejpopularnejšich,nejlepšich,nejuspešnejšich her v historii
+        videoher!</h2>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTE6pjlGZLJZZkJgfIO_d0ReAGKE5ISac1GJg&s" width="800px" height="400px">
+        <h2>Undertale-je RPG hra udělana Toby Foxem a Temmie Chang.To je hra v jaky každe řešeni měni vyvoj hry.Byla vypuštena v 2015 roce a začala se dělat v 2013 roce.Byla nejpopularnejši v 2016-2017 roce 
+            a nedavno tihle hře už stalo 10 let!Za tenhle čas prodalo vic než 40 milionu prodavani kopii(a tohle ještě ne počitame pirat versie jako u mně)to je vic než myslete protože
+            Minecraft(nejpopularnejši hra na světě) ma 300+milionu a proto undertale je nekde v top 50.Stoji prumerně 230 Korun.
+        </h2>
+        <img src="https://i.pinimg.com/736x/a8/fd/11/a8fd114e2bbbc9556b16ae697d6c909a.jpg" width="600px" height="800px">
+    <h1>PRUBEH HRY</h1>
+    <h2>Undertale se odehrává v Podzemí, říši, kde byla po vypuknutí války s lidmi před událostmi hry vyhnána monstra. Podzemí je od povrchu odděleno magickou bariérou s jedinou mezerou u hory Ebott.Na začátku hry spadne hráčovo lidské dítě z hory Ebott do Podzemí a narazí na Flowey, vnímající květinu, která hráče učí herní mechaniku a lže o „LV“ neboli „LÁSCE“ ve snaze ho zabít. Člověka poté zachrání Toriel, mateřská koza podobná nestvůra, která ho naučí, jak přežít konflikt v Podzemí bez zabíjení. Má v úmyslu si ho adoptovat, protože ho chce ochránit před Asgorem, králem Podzemí.
+        </h2>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgZCbEWHkzMNfZP4ymbzNvQ9Smbpn5899wiA&s" width="700px" height="600px">
+        <h2>Člověk nakonec opouští Toriel, aby hledal Asgoreův hrad, který obsahuje bariéru do povrchového světa. Setkávají se s několika monstry, jako jsou kostlivci Sans a Papyrus, dva bratři, kteří slouží jako stráže v lese Snowdin; Undyne, velitel královské stráže; Alphys, královský vědec království; a Mettaton, robotický televizní moderátor, kterého Alphys stvořila. S většinou monster se bojuje, přičemž člověk se rozhoduje, zda je zabije, nebo se s monstrem ušetří a případně se s ním spřátelí. Během svých cest se člověk dozví, že před mnoha lety se Asriel, syn Asgorea a Toriel, spřátelil s prvním člověkem, který spadl do podzemí. Když dítě náhle zemřelo, Asriel použil duši dítěte k průchodu bariérou s úmyslem vrátit tělo na povrch. Lidé, kteří tam žili, Asriela napadli a zabili, což vedlo Asgorea k vyhlášení války. V současnosti Asgore shromáždil šest duší od padlých lidí a potřebuje další jednu, aby bariéru zničil.</h2>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDefl9g4KoDq4dTTEMiuIqUaWkseOTHEMc3w&s" width="600px" height="600px">
+        <h2>Konec hry závisí na tom, jak hráč zvládne setkání s monstry. Pokud hráč zabije několik, ale ne všechny monstra, nebo nezabije žádné, zažije „neutrální“ konec. Člověk dorazí k Asgoreovu hradu a je nucen s ním bojovat. Sans člověka zastaví před jejich konfrontací a odhalí, že jeho „LOVE“ a „EXP“ jsou zkratky pro „level of violence“ a „execution points“.Sans soudí člověka na základě jeho nashromážděných „LOVE“ a „EXP“. Člověk poté bojuje s Asgorem, ale Flowey ho přeruší, zabije Asgorea a promění se v silnější formu tím, že ukradne lidské duše. S pomocí vzbouřených duší člověk Floweyho porazí a může se rozhodnout, zda ho zabije, nebo ušetří. Člověk poté opouští podzemí. Později dostanou telefonát od Sanse, který jim vysvětlí stav podzemí po lidském odchodu</h2>
+        <img src="https://preview.redd.it/a-beautiful-painting-of-the-ruins-v0-vmd25szzbmza1.jpg?width=640&crop=smart&auto=webp&s=9b11514f5583038f81bed1ad6b8d8c2bb7575ea4" width="800px" height="600px">
+        <h2>Pokud hráč nezabije žádné příšery před dokončením „neutrálního“ konce, může si znovu načíst uloženou hru a dokončit „pravý pacifistický“ konec. Flowey se ukáže jako reinkarnace Asriela, náhodně vytvořená Alphysinými experimenty. Během boje s Asgorem Toriel bitvu zastaví a připojí se k ní další příšery, se kterými se člověk spřátelil. Flowey skupinu přepadne a pohltí duše všech lidí a příšer, aby mohl přijmout podobu staršího Asriela. Během následného boje se člověku podaří spojit s dušemi jejich přátel a nakonec Asriela porazí: Vrátí se do své dětské podoby, zničí bariéru a vyjádří lítost nad svými činy, než odejde, přičemž odhalí lidské pravé jméno Frisk. Člověk upadne do bezvědomí a je probuzen, aby viděl, jak ho obklopují jejich přátelé. Příšery se pokojně znovu integrují s lidmi, zatímco člověk má možnost přijmout Toriel jako svou adoptivní matku.</h2>
+        <img src="https://i.pinimg.com/564x/55/71/ac/5571acaab82b80e2a2374e5184ca7c7a.jpg" width="500px" height="600px">
+        <h2>
+Třetí konec, fanouškům známý jako konec „Žádné slitování“ nebo „Genocida“, nastává, pokud hráč zabije všechna bojovatelná monstra. Hráč musí opakovaně spouštět náhodná setkání v každé oblasti, dokud nezůstanou žádná další monstra. Tato cesta mění aspekty hry: mnoho postav evakuuje, aby unikly hráči, a ty, které zůstanou, mají upravený dialog odrážející dopad jejich činů na herní svět. Když člověk dosáhne Asgoreova hradu, Sans se ho pokusí zastavit, ale selže a je zabit. Flowey zabije Asgorea ve snaze získat slitování, ale člověk ho zabije. Poté se objeví Chara, první padlé dítě, které se spřátelilo s Asrielem, a vymaže svět. Aby bylo možné hru znovu přehrát, musí hráč dát svou duši Cháře, čímž obnoví svět a trvale změní pravý pacifistický konec.</h2>
+        <img src="https://cdnb.artstation.com/p/assets/images/images/030/910/055/large/maria-beatriz-magalhaes-frisk-genocide.jpg?1602016867&dl=1" width="500px" height="600px">
+        <h1>VYSLEDEK</h1>
+        <h2>Hra stala kulturni a revolučni tim že často ve hře objevuje zlomeni 4 zdí tak že je ještě nova hra-Deltarune od Toby Foxa jaka je hodně v čem podobna ale pro ni budeme mluvit jinde.
+            Tak-že je hodně fanmade dobrych her jako Undertale-Yellow,Underswap,last breath a t.d.A tak-že Indi-serialy jako Glichttale a underverse a t.d.
+        </h2>
+        <img src="https://i.ytimg.com/vi/DRIw5N1YQ3k/maxresdefault.jpg" width="900px" height="600px">
+    <style>
+        h2 {
+            font-family: "Trade Winds", system-ui;
+            font-weight: 400;
+            font-style: normal;
+        }
+
+        h1 {
+            color: goldenrod;
+
+            font-family: "Trade Winds", system-ui;
+            font-weight: 400;
+            font-style: normal;
+
+        }
+
+        body {
+            background: #3F5EFB;
+            background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
+        }
+    </style>
+</body>
+
 </html>
